# MilanCrash

./: .gitignore  README.md  TODO.md  findings.md  plan.md  pyproject.toml
Italy/: analysis.py  analyze_mortality_anomalies.py  progetto_istat_incidenti_2007_2024 copy.ipynb
Milan/cleaning/: DrugUseProcessing.ipynb
Milan/data/processed/: area_c_daily_total_accesses.csv  area_c_hourly_model_table.csv  area_c_hourly_wide.csv  area_c_monthly_exposure.csv  incidenti_milano_2021.csv  milan_crashes_city_ring_area_c_exposure.csv  milan_crashes_monthly_city_ring_cleaned.csv  milano_2021_clustering_features.csv  processed.md  (+1 more)
Milan/inference/: CerchieSeasonality.ipynb  CrashDrugUse.ipynb
Milan/scripts/: inference_utils.py
data/: Giuseppe
data/processed/: processed.md
data/raw/: raw.md
new_project/: riepilogo_dataset_istat_incidenti_2007_2024.txt
new_project/progetto_istat_incidenti_2007_2024_improved_py/: analysis.py
notebooks/: Cerchie.ipynb  CrashDrugUse.ipynb  CrashType.ipynb  DrugUseProcessing.ipynb  Fleet.ipynb  MilanCrashesProcessing.ipynb  Processed.ipynb  VehiclesProcessing.ipynb
notebooks/cleaning/: AreaCProcessing.ipynb
notebooks/inference/: Cerchie.ipynb  CerchieSeasonality.ipynb  CrashType.ipynb
notebooks/new_project/: istat_incidenti_cause_2007_2024_long.csv  istat_incidenti_cause_2007_2024_wide.csv
old_project/: plan.md
old_project/inference/: AreaC.ipynb  Fleet.ipynb
old_project/scripts/: _apply_batch1_edits.py  crashes_milan.py  drug_wastewater_euda.py  vehicle_fleet_milan.py
scripts/: _add_inference_markdown.py  data_milan.py
(+15 files in other folders)
